# apifirst-api

anyctl/: pyproject.toml
anyctl/anyctl/: setup.py
anyctl/anyctl/api/: api.py  openapi.yaml
anyctl/anyctl/api/controllers/: pets_controller.py  version.py
anyctl/anyctl/resources/: pet_resources.py  pets.json
anyctl/tests/: test_anyctl.py
