[tool.poetry]
name = "anyctl"
version = "0.1.0"
description = ""
authors = ["Roberto Barbosa <rnrbarbosa@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
connexion = {extras = ["swagger-ui"], version = "^2.7.0"}
swagger-ui = "^0.1.2"
aiohttp = {extras = ["aiohttp_jinja2"], version = "^3.6.2"}
aiohttp_jinja2 = "^1.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
